--- a/.gitignore
+++ b/.gitignore
@@ -255,4 +255,4 @@ $RECYCLE.BIN/
 
 # End of https://www.gitignore.io/api/node,osx,windows,intellij,vim,emacs,npm
 
-./app/script/key.js
+/app/script/key.js
